<resources>
    <string name="app_name">DrawableDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="music_drawable">音乐播放标记:</string>
    <string name="path_effects">路径绘制:</string>
    <string name="point_type">选择绘制模式:</string>
    <string name="statistics">统计图标</string>
    <string name="music_play">音乐播放标记</string>
    <string name="magnifier">放大镜</string>
    <string name="set_width">设置宽度</string>
    <string name="set_height">设置高度</string>
    <string name="set_size">设置尺寸</string>
    <string name="size_value">当前大小:%s</string>
    <string name="user">用户</string>
    <string name="setting">设置</string>
    <string name="set_degress">设置角度</string>
    <string name="degress_value">角度:%s</string>
</resources>
