<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:clickable="true"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/music_drawable"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_title" />

        <ImageView
            android:id="@+id/iv_music"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/path_effects"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_title" />

        <ImageView
            android:id="@+id/iv_path_effect"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/statistics"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_title" />

        <ImageView
            android:id="@+id/iv_statistics"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/music_play"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_title" />

        <ImageView
            android:id="@+id/iv_music_play"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/magnifier"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_title" />


        <ImageView
            android:id="@+id/iv_magnifier"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/setting"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_title" />

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_personel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/user"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_title" />

        <ImageView
            android:id="@+id/iv_personel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tv_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/set_size"
            android:textColor="@color/title_color"
            android:textSize="@dimen/text_title" />

        <SeekBar
            android:id="@+id/sb_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</ScrollView>